# vscode_rust_workspace

cargo_projects/macro_demo/demo/: Cargo.toml
cargo_projects/macro_demo/demo/src/: main.rs
cargo_projects/macro_demo/hello_macro/: Cargo.toml
cargo_projects/macro_demo/hello_macro/hello_macro_derive/: Cargo.toml
cargo_projects/mydoc/: Cargo.toml
cargo_projects/mydoc/src/: lib.rs
cargo_projects/myproject/: Cargo.toml
cargo_projects/myproject/src/: lib.rs  main.rs  main_stdin.rs
cargo_projects/mytest/: Cargo.toml
cargo_projects/mytest/src/: lib.rs
cargo_projects/mytest/tests/: common.rs  integration_test.rs
cargo_projects/third_parent/: Cargo.toml
cargo_projects/third_parent/src/: main.rs
cargo_projects/third_parent/third_gtk4/: Cargo.toml
cargo_projects/third_parent/third_wasm/: Cargo.toml
cargo_projects/third_parent/third_wasm/src/: main.rs
rustc_basic/src/: 01_basic.rs  02_owner.rs  03_borrow.rs  04_slice.rs  05_struct.rs  06_enum.rs  07_lib.rs  07_lib_enum_sample.rs  07_lib_struct_sample.rs  08_collections.rs  09_string.rs  10_error.rs  10_error2.rs  11_generic.rs  11_generic2.rs  12_trait.rs  13_lifecycle.rs  15_io_sample.rs  16_closure.rs  17_iterator.rs  19_1_pointer_box.rs  19_2_pointer_rc.rs  19_3_pointer_RefCell.rs  19_4_pointer_multi_mute.rs  19_5_cycle_ref_sample.rs  19_6_tree_weak.rs  20_1_thread.rs  21_2_thread_lock.rs  22_1_object.rs  22_2_object_state.rs  23_match.rs  24_unsafe.rs  25_trait_adv_add.rs  25_trait_adv_name.rs  26_adv.rs  27_macro_deprecat.rs  28_tcp_server.rs  29_simple_web_server.rs  read_stdin.rs
(+2 files in other folders)
