[package]
name = "third_parent"
version = "0.1.0"
authors = ["User <userId@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace] 
members = [
    "third_gtk4",
    "third_wasm",
]

[dependencies]
